# mlops

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  Taskfile.yml  WORKSPACE  agent-loop.md  debugging.md  docker-compose.yml  kronodroid.md  kube-commands.md  kubernetes-cmd.md  mise.toml  pipeline1.md  pyproject.toml  test_iceberg.py  test_iceberg_rest.py  uv.toml  versioning-datasets.md
1/029b7c9452354a92910222fd15d65e49/checkpoints/: epoch=0-step=1.ckpt
1/2c789bf7b8d84e649d42abece26b1bf9/checkpoints/: epoch=0-step=1.ckpt
1/b4336953d0bc4e00932299d5b4c5dcdc/checkpoints/: epoch=0-step=1.ckpt
1/e10ca536f44e4d83aaf607c7a384a042/checkpoints/: epoch=9-step=40.ckpt
analytics/dbt/: dbt_project.yml
analytics/dbt/data/: dbt_lakefs.duckdb
analytics/dbt/macros/: README.md  kronodroid_features.sql  lakefs_sources.sql  spark_helpers.sql
analytics/dbt/models/: README.md
analytics/dbt/profiles/: .user.yml  README.md  profiles.yml
analytics/dbt/tests/: README.md
analytics/tinybird/datasources/: README.md
analytics/tinybird/pipes/: README.md
apps/: BUILD.bazel
apps/android/: BUILD.bazel
apps/android/main_app/: BUILD.bazel
apps/android/main_app/src/main/: AndroidManifest.xml
apps/android/main_app/src/main/java/com/dfp/app/: MainActivity.kt
apps/android/mlops/: .bazelproject
apps/android/runtime_comparison_app/: BUILD.bazel
apps/android/runtime_comparison_app/src/androidTest/java/com/dfp/runtimeapp/: ModelAccuracyTest.kt
apps/android/runtime_comparison_app/src/main/: AndroidManifest.xml
apps/android/runtime_comparison_app/src/main/assets/test_data/: expected_outputs.json
apps/android/runtime_comparison_app/src/main/java/com/dfp/runtimeapp/: MainActivity.kt  ModelBenchmark.kt  ResultsReporter.kt
apps/api/: BUILD.bazel
apps/api/dfp_api/: __init__.py  main.py
apps/api/dfp_api/models/: __init__.py
apps/api/dfp_api/routes/: __init__.py
ci/dagger/: main.go  model_pipeline.go
ci/github/workflows/: build_and_test.yml  kfp_pipeline_compile.yml  lint.yml
ci/tekton/pipelines/: README.md
ci/tekton/tasks/: README.md
core/conf/: config.yaml
core/conf/data/: android_logs_dev.yaml  android_logs_prod.yaml  kronodroid.yaml
core/conf/device/: android_emulator.yaml  galaxy_s24.yaml
core/conf/engine/: datafusion.yaml  spark.yaml
core/conf/export/: executorch_android.yaml  tflite_android.yaml
core/conf/feature_store/: alt_store.yaml  feast.yaml
core/conf/model/: ae_large.yaml  ae_small.yaml  vae.yaml
core/conf/orchestration/: airflow.yaml  kubeflow.yaml
core/dfp_core/: __init__.py  feast_mlflow_utils.py  lakefs_client_utils.py
core/dfp_core/config/: data_config.py  mlflow_config.py
core/dfp_core/domain/: device.py  events.py
core/dfp_core/features/: base.py  feature_views.py  transformations.py
core/dfp_core/io/: contracts.py  schema.py
core/dfp_core/ml/: autoencoder_lightning.py  datasets.py  eval_server.py  export_executorch.py  export_onnx.py  export_tflite.py  kronodroid_feast_dataset.py  lightning_modules.py  models.py  train_kronodroid_autoencoder.py  training_pytorch.py  training_tf.py
data/: test_samples.npy
docs/: android.md  android_runtime_lab.md  architecture.md  data_lineage.md  experiments.md  kronodroid_autoencoder_pipeline.md  python-versioning.md  versioning-datasets.md
engines/datafusion_engine/: BUILD.bazel
engines/datafusion_engine/dfp_datafusion/: __init__.py  feature_jobs.py  session.py
engines/dlt_engine/: BUILD.bazel
engines/dlt_engine/dfp_dlt/: __init__.py  kaggle_compat.py  kaggle_source.py  kronodroid_pipeline.py  minio_destination.py
engines/spark_engine/: BUILD.bazel
engines/spark_engine/dfp_spark/: __init__.py  feature_jobs.py  iceberg_catalog.py  ingestion_jobs.py  kronodroid_iceberg_job.py  session.py
feature_stores/alt_store/dfp_alt_store/: __init__.py  adapter.py
feature_stores/feast_store/: feature_store.yaml  feature_store_spark.yaml
feature_stores/feast_store/data/: online_store.db  registry.db
feature_stores/feast_store/dfp_feast/: __init__.py  entities.py  feature_views.py  kronodroid_features.py  materialization_jobs.py
infra/iac/base-networking/: README.md
infra/iac/feast/: README.md
infra/iac/kubeflow/: README.md
infra/iac/lakefs/: README.md
infra/iac/mlflow/: README.md
infra/iac/spark-cluster/: README.md
infra/pyinfra/: README.md
models/: .gitkeep  BUILD.bazel  model.json
notebooks/: README.md  compile_kronodroid_autoencoder_pipeline.ipynb  feast_historical_features.ipynb  feast_spark_explorer.ipynb  iceberg_data_explorer.ipynb  lakefs_tracked_data_viewer.ipynb  minio_utils.ipynb  mlflow_model_evaluation.ipynb  run_kronodroid_pipeline.ipynb  spark_feast_test.ipynb  spark_operator_test.ipynb  storage_admin.ipynb
runtimes/executorch/: BUILD.bazel
runtimes/executorch/export/: __init__.py  cli.py  exporter.py  mlflow_client.py  quantization.py
runtimes/executorch/java/com/dfp/runtime/: ExecuRunner.kt
runtimes/executorch/native/: execu_bridge.cc  execu_bridge.h
runtimes/onnx/: BUILD.bazel
runtimes/tflite/: BUILD.bazel
tests/e2e/: test_full_kfp_execu_pipeline.py
tests/integration/: test_execu_android_roundtrip.py  test_feast_spark_integration.py  test_kronodroid_e2e.py  test_mlflow_logging.py
tests/unit/: test_feature_transforms.py  test_kaggle_user_agent_patch.py  test_kfp_pipeline_compile.py  test_lakefs_utils.py  test_models.py
tools/docker/: Dockerfile.android_emulator  Dockerfile.autoencoder_train  Dockerfile.bazel_android  Dockerfile.feast_mlflow  Dockerfile.kfp_training  Dockerfile.lakefs_component  Dockerfile.pytorch_train  Dockerfile.spark  requirements-spark.txt
tools/eval/: BUILD.bazel  eval_android.sh  eval_server.py
tools/k8s/: feast-configmap.yaml
tools/model_validation/: BUILD.bazel  compare_results.py  retrain_model.py  test_export.py  validate_model.py
tools/scripts/: backfill_features.py  clear_kfp.py  export_dbt_to_lakefs.py  kfp_install.sh  kind_bootstrap.sh  kind_portforward.sh  replay_mlflow_run.py  run_kronodroid_pipeline.py  sync_lakefs_branches.py
(+76 files in other folders)
