"""Root BUILD file for DFP MLOps monorepo."""

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Build Settings
# =============================================================================

# Feature flag for ExecuTorch support
config_setting(
    name = "executorch_enabled",
    define_values = {"executorch": "true"},
)

# Feature flag for XNNPack backend
config_setting(
    name = "xnnpack_enabled",
    define_values = {"xnnpack": "true"},
)

# =============================================================================
# Platform Configurations
# =============================================================================

config_setting(
    name = "android_arm64",
    values = {"cpu": "arm64-v8a"},
)

config_setting(
    name = "android_arm32",
    values = {"cpu": "armeabi-v7a"},
)

config_setting(
    name = "android_x86_64",
    values = {"cpu": "x86_64"},
)

# =============================================================================
# Aliases for common targets
# =============================================================================

alias(
    name = "main_app",
    actual = "//apps/android/main_app:main_app",
)

alias(
    name = "runtime_comparison_app",
    actual = "//apps/android/runtime_comparison_app:runtime_comparison_app",
)
