"""Bazel module definition for DFP MLOps monorepo."""

module(
    name = "dfp_mlops",
    version = "0.1.0",
)

# =============================================================================
# Android Rules
# =============================================================================

bazel_dep(name = "rules_android", version = "0.6.0")

# Android SDK repository
register_toolchains("@rules_android//toolchains/android:android_default_toolchain")

# Android NDK for native code (ExecuTorch)
bazel_dep(name = "rules_android_ndk", version = "0.2.0")

# =============================================================================
# Kotlin Rules
# =============================================================================

bazel_dep(name = "rules_kotlin", version = "2.0.0")

# =============================================================================
# Java Rules & Maven Dependencies
# =============================================================================

bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_jvm_external", version = "6.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "maven",
    artifacts = [
        # AndroidX Core
        "androidx.core:core-ktx:1.13.1",
        "androidx.appcompat:appcompat:1.7.0",
        "androidx.activity:activity-ktx:1.9.3",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7",

        # Material Design
        "com.google.android.material:material:1.12.0",

        # Coroutines
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0",

        # ExecuTorch runtime (PyTorch Mobile successor)
        "org.pytorch:executorch:0.4.0",

        # Testing
        "junit:junit:4.13.2",
        "org.robolectric:robolectric:4.14.1",
        "androidx.test:core:1.6.1",
        "androidx.test:runner:1.6.2",
        "androidx.test:rules:1.6.1",
        "androidx.test.ext:junit:1.2.1",
        "org.mockito:mockito-core:5.14.2",
        "org.mockito.kotlin:mockito-kotlin:5.4.0",
        "com.google.truth:truth:1.4.4",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")

# =============================================================================
# C++ Rules (for ExecuTorch native code)
# =============================================================================

bazel_dep(name = "rules_cc", version = "0.1.0")

# =============================================================================
# Proto Rules (if needed for model metadata)
# =============================================================================

bazel_dep(name = "rules_proto", version = "7.0.2")

# =============================================================================
# Testing Rules
# =============================================================================

bazel_dep(name = "googletest", version = "1.15.2")

# =============================================================================
# Robolectric
# =============================================================================

bazel_dep(name = "robolectric", version = "4.14.1")
