[project]
name = "dfp-monorepo"
version = "0.1.0"
description = "Digital Fingerprinting pipelines with swappable engines and stores"
requires-python = ">=3.10,<3.14"
authors = [{name = "DFP Team"}]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.1",
    # Use a version that has macOS arm64 wheels for CPython 3.13
    "pyarrow>=21.0.0",
    "mlflow>=2.9",
    "feast[redis,spark]>=0.32",
    "pyspark>=3.5",
    "lakefs-sdk>=0.120.0",
    "dagster~=1.4",
    "torch>=2.1",
    # dlt and dbt for data ingestion and transformation
    "dlt[filesystem]>=0.4",
    "dbt-core>=1.7",
    "dbt-spark[session]>=1.7",
    # Kaggle API for dataset downloads
    "kaggle>=1.6",
    # S3/MinIO compatibility
    "boto3>=1.34",
    "s3fs>=2024.2",
    # Avro support for dlt and Spark
    "fastavro>=1.9",
    # PyPI package name is `avro` (Apache Avro for Python)
    "avro>=1.11",
    # Iceberg Python client
    "pyiceberg>=0.6",
    # HTTP client for LakeFS API
    "requests>=2.31",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    # Linting and type checking (per AGENTS.md)
    "pyrefly>=0.15",
    "torchfix>=0.4",
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
    # Legacy DuckDB for migration testing
    "duckdb>=0.10",
    "dbt-duckdb>=1.7",
]

[tool.dbt]
# dbt project configuration
project-dir = "analytics/dbt"
profiles-dir = "analytics/dbt/profiles"
