[project]
name = "dfp-monorepo"
version = "0.1.0"
description = "Digital Fingerprinting pipelines with swappable engines and stores"
requires-python = ">=3.10"
authors = [{name = "DFP Team"}]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.1",
    "pyarrow>=13.0",
    "mlflow>=2.9",
    "feast[redis]>=0.32",
    "pyspark>=3.5",
    "lakefs-client>=1.1",
    "dagster~=1.4",
    "torch>=2.1",
    # PyTorch Lightning for model training
    "lightning>=2.0",
    # dlt and dbt for data ingestion and transformation
    "dlt[filesystem]>=0.4",
    "dbt-core>=1.7",
    "dbt-duckdb>=1.7",
    # Kaggle API for dataset downloads
    "kaggle>=1.6",
    # S3/MinIO compatibility
    "boto3>=1.34",
    "s3fs>=2024.2",
    # DuckDB for local analytical queries
    "duckdb>=0.10",
    # HTTP client for LakeFS API
    "requests>=2.31",
    # Kubeflow / SparkOperator submission (tools/scripts/run_kronodroid_pipeline.py --transform-engine kubeflow)
    "kubernetes>=29.0",
    "pyyaml>=6.0",
    # Kubeflow Pipelines SDK
    "kfp>=2.0",
    # KFP Kubernetes extension for secrets, configmaps, etc.
    "kfp-kubernetes>=1.0",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    # Linting and type checking (per AGENTS.md)
    "pyrefly>=0.15",
    "torchfix>=0.4",
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
