[project]
name = "dfp-monorepo"
version = "0.1.0"
description = "Digital Fingerprinting pipelines with swappable engines and stores"
# Python 3.12 is the "blessed" version for this project:
# - Supported by ExecuTorch (requires 3.10-3.12)
# - Compatible with PyTorch 2.5.x
# - Works with Spark 3.5 containers
# - Has modern Python features without breaking compatibility
# Note: We pin to 3.12 to avoid executorch's pandas constraints on 3.10/3.11
requires-python = ">=3.12,<3.13"
authors = [{name = "DFP Team"}]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.1",
    "pyarrow>=13.0",
    "mlflow>=2.9",
    "feast[redis]>=0.32",
    "pyspark>=3.5",
    "lakefs-client>=1.1",
    "dagster~=1.4",
    # PyTorch 2.5.x for ExecuTorch 0.4.0 compatibility
    # Note: Models saved with PyTorch 2.4.x need to be re-saved with 2.5.x
    # See docs/python-versioning.md for migration instructions
    "torch>=2.5.0,<2.6",
    # dlt and dbt for data ingestion and transformation
    "dlt[filesystem]>=0.4",
    "dbt-core>=1.7",
    "dbt-duckdb>=1.7",
    # Kaggle API for dataset downloads
    "kaggle>=1.6",
    # S3/MinIO compatibility
    "boto3>=1.34",
    "s3fs>=2024.2",
    # DuckDB for local analytical queries
    "duckdb>=0.10",
    # HTTP client for LakeFS API
    "requests>=2.31",
    # Kubeflow / SparkOperator submission (tools/scripts/run_kronodroid_pipeline.py --transform-engine kubeflow)
    "kubernetes>=29.0",
    "pyyaml>=6.0",
    "kfp>=2.15.2",
    "kfp-kubernetes>=1.4.0",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    # Linting and type checking (per AGENTS.md)
    "pyrefly>=0.15",
    "torchfix>=0.4",
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

android = [
    # ExecuTorch for PyTorch mobile deployment
    # Install with: uv sync --group android
    # Requires Python 3.10-3.12 (no 3.13 support)
    # executorch 0.4.0 requires torch==2.5.0
    "executorch==0.4.0",
]

# Kubeflow pipeline dependencies - matches container environment
# Use: uv sync --group kubeflow
kubeflow = [
    "kfp>=2.9.0",
    "lightning>=2.0",
    "tensorboard>=2.0",
    "psutil>=5.9",
]

# NOTE: Spark/Feast container dependencies (pandas<2) are defined directly
# in tools/docker/Dockerfile.autoencoder_train and tools/docker/requirements-spark.txt
# They cannot be a dependency group here because pandas<2 conflicts with main deps
