"""DFP Main Android Application."""

load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Main Application Binary
# =============================================================================

android_binary(
    name = "main_app",
    custom_package = "com.dfp.app",
    manifest = "src/main/AndroidManifest.xml",
    multidex = "native",
    deps = [
        ":main_app_lib",
    ],
)

# =============================================================================
# Main Application Library
# =============================================================================

kt_android_library(
    name = "main_app_lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    custom_package = "com.dfp.app",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:com_google_android_material_material",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        # ExecuTorch for model inference
        "@maven//:org_pytorch_executorch",
    ],
)

# =============================================================================
# Debug Build
# =============================================================================

android_binary(
    name = "main_app_debug",
    custom_package = "com.dfp.app",
    debug_key = "//apps/android:debug_keystore",
    manifest = "src/main/AndroidManifest.xml",
    multidex = "native",
    deps = [
        ":main_app_lib",
    ],
)

# =============================================================================
# Unit Tests (Robolectric)
# =============================================================================

android_local_test(
    name = "main_app_test",
    srcs = glob(["src/test/java/**/*.kt"]),
    custom_package = "com.dfp.app",
    manifest = "src/test/AndroidManifest.xml" if glob(["src/test/AndroidManifest.xml"]) else "src/main/AndroidManifest.xml",
    test_class = "com.dfp.app.MainActivityTest",
    deps = [
        ":main_app_lib",
        "@maven//:androidx_test_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_mockito_kotlin_mockito_kotlin",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_robolectric_robolectric",
    ],
) if glob(["src/test/java/**/*.kt"]) else None

# =============================================================================
# Instrumentation Tests
# =============================================================================

android_instrumentation_test(
    name = "main_app_instrumentation_test",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:google_30_x86",
    test_app = ":main_app_test_apk",
) if glob(["src/androidTest/java/**/*.kt"]) else None

android_binary(
    name = "main_app_test_apk",
    custom_package = "com.dfp.app.test",
    instruments = ":main_app",
    manifest = "src/androidTest/AndroidManifest.xml",
    deps = [
        ":main_app_lib",
        "@maven//:androidx_test_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_rules",
        "@maven//:androidx_test_runner",
    ],
) if glob(["src/androidTest/java/**/*.kt"]) else None
